# asi-labs

./: .gitignore  Dockerfile.gpu  README.md  pyproject.toml
.devcontainer/cpu/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
lab_week1/: Bayesian_Linear_Regression.ipynb
lab_week2/: Bayesian_Logistic_Regression_MCMC.ipynb
lab_week3/: Gaussian_Process_Regression.ipynb
lab_week4/: Variational_Logistic_Regression.ipynb
lab_week5/: Variational_autoencoders.ipynb
