[project]
name = "asi-labs-private"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clu>=0.0.12",
    "datasets>=3.6.0",
    "flax>=0.10.6",
    "ipykernel>=7.0.0a0",
    "ipython>=8.31.0",
    "ipywidgets>=8.1.5",
    "jax[cuda12]>=0.5.0",
    "jaxlib>=0.5.3",
    "jupytext>=1.17.2",
    "matplotlib>=3.10.0",
    "numpy<2",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "tensorflow-probability>=0.25.0",
    "tqdm>=4.67.1",
]
